3.3.1 - 07/10/2017
Added:
- Set Slackware version via configuration file /etc/slpkg/slpkg.conf

3.3.0 - 01/10/2017
Fixed: 
- TypeError: stat() argument 1 must be encoded string without null bytes,
not str #100
- Check file script before build (IOError: [Errno 2] No such file or
directory: )

3.2.9 - 24/09/2017
Fixed:
- Strange dependency problem #97

Added:
- patches/ directory from slack repository (slpkg -F "slack" fail #98)

3.2.8 - 06/08/2017
Fixed:
- BugFix: Package return after build

Updated:
- Build error message

3.2.7 - 09/04/2017
Updated:
- Alien's repositories {alien, ktown, multi} #83 (Thanks to travis-82)
- Rworkman's repository {rlw} #83
- Package security message for network and sbo repository

Added:
- Sbosrcarch as secondary repository for source files #82 (Thanks to
travis-82)
- Rebuild packages from sbo repository when upgrading #85 (Thanks to bhreach)

3.2.6 - 22/02/2017
Updated:
- Pattern for configuration file

Added:
- Support the special packages who need attention (OpenGL 32-Bits Libs after
upgrade #81) Thanks to Edward W. Koenig and Inukaze for the report
- pkg_security configuration file

3.2.5 - 17/02/2017
Updated:
- Url for mles/mled repository (Thanks Kiki Novak for the report)
- Switch to arch i586 for sbo repository
- Switch off progress bar by default

Fixed:
- Exit codes - another scenario of #73 #79

3.2.4 - 10/02/2017
Updated:
- Switch SlackBuild script to arch i586
- Rename repository slackr to conrad
- Repository MATE to support Slackware -current x86_64

Added:
- Repository Cinnamon
- Repository Connochaetos (slack-n-free)
- Repository Microlinux {desktop, server, extras}

Fixed:
- Upgrade package lists
- Mate repository check for updates

3.2.3 - 07/02/2017
Updated:
- Copyright year
- Slackware mirrors

Fixed:
- Update package lists after fresh installation (IOError: [Errno 2] No such file
or directory)

3.2.2 - 26/10/2016
Added:
- Support Python3 with 2to3 tool.
- Build and install with Python 3

3.2.1 - 25/10/2016
Fixed: