@@ -26,9 +26,11 @@
 # Slackware release "stable" or "current".
 RELEASE=stable
 
-# Set Slackware version. It's not necessary only for some reasons.
-# Default is "off".
+# Set Slackware version if it's necessary. Default is "off".
 SLACKWARE_VERSION=off
+
+# Set computer architecture if it's necessary. Default is "off".
+COMP_ARCH=off
 
 # Build directory for repository "sbo" slackbuilds.org. In this 
 # directory downloaded sources and scripts for building.
