@@ -1,6 +1,7 @@
 3.3.1 - 07/10/2017
 Added:
 - Set Slackware version via configuration file /etc/slpkg/slpkg.conf
+- Set computer architecture via configuration file /etc/slpkg/slpkg.conf
 
 3.3.0 - 01/10/2017
 Fixed: 
